# signlearner

./: .gitignore  README.md
backend/: README.md  config.py  config_template.py  llama_client.py  main.py  pyproject.toml  schemas.py  scrape_asl_vids.py
backend/api/: asl_query_processor.py  ingest.py  main.py  vector_db_utils.py
backend/asl_data/: asl_videos.json
backend/embeddings/: embedder.py
backend/langchain_asl/: __init__.py  asl_query_enhancer.py  lesson_generator.py
signlearner-frontend/: package-lock.json  package.json
signlearner-frontend/public/: index.html  manifest.json
signlearner-frontend/src/: App.js  index.css
signlearner-frontend/src/components/: ASLEnhancementPanel.js  ASLTranslator.js  LessonPlanDisplay.js  SearchForm.js  SearchInfo.js  VideoCard.js  VideoGrid.js  index.js
signlearner-frontend/src/components/common/: ErrorMessage.js  Header.js  LoadingSpinner.js
signlearner-frontend/src/config/: constants.js
signlearner-frontend/src/hooks/: useASLApi.js
signlearner-frontend/src/styles/: ASLTranslator.styles.js
signlearner-frontend/src/utils/: helpers.js
