[tool.poetry]
name = "backend"
version = "0.1.0"
description = ""
authors = ["Brian Fernando <brianfdo@users.noreply.github.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"
python-multipart = "^0.0.20"
pillow = "^11.2.1"
requests = "^2.32.4"
numpy = "<2.0"
onnxruntime = "1.16.3"
protobuf = ">=3.19.0,<3.21.0"
chromadb = "^1.0.13"
sentence-transformers = "^2.2.2"
google-api-python-client = "^2.88.0"
isodate = "^0.6.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
